// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */
module.exports = 0;

=====================================output=====================================
/* @flow */
module.exports = 0;

================================================================================
`;

exports[`B.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */
module.exports = { foo: "" }

=====================================output=====================================
/* @flow */
module.exports = { foo: "" };

================================================================================
`;

exports[`C.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */
var o = {
    A: require('./A'),
    ...require('./B'),
};
module.exports = o;

=====================================output=====================================
/* @flow */
var o = {
  A: require("./A"),
  ...require("./B"),
};
module.exports = o;

================================================================================
`;

exports[`D.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */
var C = require('./C');
var x: number = C.foo;
var y: string = C.A;
C.A = false;

=====================================output=====================================
/* @flow */
var C = require("./C");
var x: number = C.foo;
var y: string = C.A;
C.A = false;

================================================================================
`;
